--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -27,6 +27,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
+
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
@@ -37,13 +38,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/name">
+        android:layout_height="match_parent">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:paddingBottom="40dp"
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            tools:listitem="@layout/contact_single_messages"
+            android:layout_height="match_parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </ScrollView>
 
 
 </LinearLayout>
